# duku-recs

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  dukus.sh  faiss_to_numpy.py  pyproject.toml  sagemaker.sh  sagemaker_sleep.sh  sagemaker_wakeup.sh
configs/: als.yaml  train.yaml
docker/: embed.Dockerfile  hydrate.Dockerfile  sagemaker.Dockerfile  sagemaker_serve.Dockerfile  serve.Dockerfile  train.Dockerfile
serve/: app.py  app_content.py  app_lightfm.py  app_sagemaker.py  app_search.py  app_semantic.py  requirements.txt  requirements_semantic_local.txt  shared.py
tools/: embed_movies.py  hydrate_tmdb_min.py  hydrate_tmdb_min_range.py
train/: train_als.py  train_lightfm.py  train_sagemaker_lightfm.py
